Fixes insufficient color contrast by upping text size and/or changing color of item
Addresses issue #103

--- a/web/themes/custom/bay_area_camp/sass/_settings.scss
+++ b/web/themes/custom/bay_area_camp/sass/_settings.scss
@@ -72,7 +72,7 @@ $navy: #0a2240;
 $tealish: #50c4b7;
 $dark-tealish: #199f94;
 $salmon: #ff8568;
-$dark-salmon: #e47053;
+$dark-salmon: #e36c4f;
 $gold: #ffba02;
 $white: #fefefe;
 $grayish: #f4f4f4;
