--- a/web/themes/custom/bay_area_camp/sass/base/_callouts.scss
+++ b/web/themes/custom/bay_area_camp/sass/base/_callouts.scss
@@ -1,5 +1,5 @@
 .section-callout {
-  font-size: rem-calc(24);
+  font-size: rem-calc(26);
   text-transform: uppercase;
   padding: 0.5em 0.75em;
   margin: 1.5em 0;
