--- a/web/themes/custom/bay_area_camp/sass/components/_sponsors.scss
+++ b/web/themes/custom/bay_area_camp/sass/components/_sponsors.scss
@@ -3,6 +3,7 @@
   color: $dark-salmon;
   text-transform: uppercase;
   font-weight: 700;
+  font-size: rem-calc(26);
 }
 
 // sponsors view
@@ -58,7 +59,7 @@
   }
   .field--sponsor-level {
     @extend .sponsor-level;
-    font-size: rem-calc(20);
+    font-size: rem-calc(24);
     line-height: 1.125;
     margin-top: 2em;
     margin-bottom: 1.5em;
